[package]
name = "crabiec61850"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
libc = "0.2.177"

[dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "packet"
harness = false

[[bench]]
name = "nanosleep"
harness = false

[[bench]]
name = "socket" # compiled = cargo bench socket --no-run
harness = true # Run separetly with sudo <compiled> --bench